Fixed bug: Remove white spaces after rotate mobile device to horizontal

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -2,7 +2,6 @@
 @use "../scss/variables" as *;
 
 .wrapper {
-  height: 100vh;
   background: $main_bg;
   display: flex;
   justify-content: center;
@@ -16,7 +15,7 @@
     overflow: hidden;
 
     @include mq() {
-      height: 100%;
+      height: 100vh;
     }
 
     .btn {
